# TensorRTExample

./: .gitignore
mlp/: CMakeLists.txt  gelu.cu  gelu.h  mlp.cpp  mlp.wts
